# CTR-Randomizer-Standalone

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: CTRRandoHandbook.md
res/: base_patch.bsdiff4
src/: main.rs  seed_settings.rs
src/seed_generation/: game_world.rs  mod.rs  randomization_datastructures.rs  randomize_game.rs  randomize_warppad_requirements.rs  seed_gen_main.rs  seed_settings.rs  spoilerlog.rs  write_rando_db.rs
src/seed_generation/item_randomization/: mod.rs  player_inventory.rs  randomize_items.rs
src/seed_generation/rom_patching/: bsdiff_patching.rs  mod.rs  xdelta_patching.rs
ui/: app-window.slint
