[package]
name = "ctrrandomizer-standalone"
version = "1.0.0-beta.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.8.0"
open = "5.3.2"
qbsdiff = "1.4.4"
rand = "0.9.2"
rand_chacha = "0.9.0"
rfd = "0.15.4"
serde_json = {version = "1.0.145", features = ["preserve_order"]}
slint = "1.12.1"

[build-dependencies]
slint-build = "1.12.1"
